sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:12: error: unclosed character literal
      if(plusPetit(i, i+1)){'
                            ^AlgBubbleSort1:14: error: unclosed character literal
   '   }
   ^AlgBubbleSort1:15: error: unclosed character literal
    }'
     ^AlgBubbleSort1:11: error: ')' expected but '<-' found.
    'for (i<-0 to getNombreValeurs()-2){
           ^AlgBubbleSort1:11: error: ';' expected but ')' found.
    'for (i<-0 to getNombreValeurs()-2){
                                      ^